--- a/package.json
+++ b/package.json
@@ -1,8 +1,10 @@
 {
-  "name": "shared",
+  "name": "@plutox/common",
+  "main": " dist/index.js",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@babel/cli": "^7.8.4",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
@@ -13,8 +15,14 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
+    "buildtwo": "BABEL_ENV=production babel src -d dist",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
+  },
+  "babel" : {
+    "presets": [
+      "react-app"
+    ]
   },
   "eslintConfig": {
     "extends": "react-app"
