--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "@plutox/common",
   "main": " dist/index.js",
   "version": "0.1.5",
-  "private": false,
+  "private": true,
   "dependencies": {
     "@babel/cli": "^7.8.4",
     "@testing-library/jest-dom": "^4.2.4",
