--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "@plutox/common",
   "main": " dist/index.js",
+  "module" : "dist/index.js",
   "version": "0.1.8",
   "dependencies": {
     "@babel/cli": "^7.8.4",
